# gardum

./: .clang-format  .clang-tidy  .gitignore  .tasks  Cargo.toml  Gardum.uproject  README.md  deny.toml
.github/workflows/: dependencies.yml  main.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultInput.ini
Content/Gardum/Characters/North/: BP_North.uasset  DT_DefaultAttributes.uasset
Content/Gardum/Core/: BP_GardumHUD.uasset
Content/Gardum/Core/GameModes/: BP_Deathmatch.uasset
Content/Gardum/Heroes/North/: BP_North.uasset  DT_DefaultAttributes.uasset
Content/Gardum/Maps/: SkyRoof.umap  SkyRoof_BuiltData.uasset
Content/Gardum/UI/HUD/: WBP_AbilityIcon.uasset  WBP_HUDWidget.uasset  WBP_HeroHUD.uasset
Content/Gardum/UI/Scoreboard/: WBP_Scoreboard.uasset  WBP_ScoreboardEntry.uasset
Source/: Gardum.Target.cs  GardumEditor.Target.cs
Source/Gardum/: Gardum.Build.cs
Source/Gardum/Private/: Gardum.cpp
Source/Gardum/Private/Core/: GardumAttributeSet.cpp  GardumGameState.cpp  GardumHUD.cpp  GardumPlayerController.cpp  GardumPlayerState.cpp  HealthChangeExecutionCalculation.cpp  Hero.cpp  Projectile.cpp
Source/Gardum/Private/Heroes/: Hero.cpp  HeroGamplayAbility.cpp
Source/Gardum/Private/UI/: NumberTextBlock.cpp
Source/Gardum/Public/: Gardum.h
assets/maps/: sky_roof.glb
assets/pickup/: blood_drop.glb  cross.glb  lightning.glb  platform.glb
src/: app_state.rs  cli.rs  lib.rs  main.rs  main_menu.rs  player_controller.rs  setup.rs  test_utils.rs
src/characters/: abilities.rs  ability.rs  action.rs  camera.rs  cooldown.rs  despawn_timer.rs  health.rs  mod.rs  movement.rs  orbit_camera.rs  projectile.rs
src/characters/heroes/: dummy.rs  mod.rs  north.rs
src/core/: ability.rs  app_state.rs  character_action.rs  cli.rs  client_settings.rs  control_actions.rs  cooldown.rs  despawn_timer.rs  developer.rs  effect.rs  effect_timer.rs  game_state.rs  graphics.rs  headless.rs  health.rs  mod.rs  movement.rs  orbit_camera.rs  pickup.rs  player.rs  projectile.rs  server_settings.rs  settings.rs  setup.rs
src/core/character/: ability.rs  character_action.rs  cooldown.rs  effect_timer.rs  mod.rs  orbit_camera.rs
src/core/effect/: mod.rs  modifier_effect.rs  periodic_effect.rs
src/core/game_modes/: mod.rs
src/core/gamemodes/: mod.rs
src/core/hero/: mod.rs  north.rs
src/core/map/: mod.rs  plane.rs  sky_roof.rs
src/core/network/: chat.rs  client.rs  message.rs  mod.rs  server.rs
src/core/session/: mod.rs  spawn.rs
src/game_modes/: mod.rs
src/maps/: mod.rs  plane.rs
src/session/: mod.rs  spawn.rs
src/ui/: back_button.rs  chat.rs  connection_dialog.rs  cursor.rs  custom_game_menu.rs  error_dialog.rs  error_message.rs  health_bar.rs  hero_selection.rs  hud.rs  ingame_menu.rs  main_menu.rs  mod.rs  modal_window.rs  perf_stats.rs  scoreboard.rs  setting_menu.rs  ui_action.rs  ui_actions.rs  ui_state.rs
src/ui/chat/: chat_area.rs  mod.rs
src/ui/chat_window/: messages_area.rs  mod.rs
src/ui/custom_game_menu/: direct_connect_menu.rs  lobby_menu.rs  mod.rs  server_browser.rs
src/ui/hud/: ability_icon.rs  crosshair.rs  health_bar.rs  mod.rs
src/ui/menu/: back_button.rs  custom_game_menu.rs  ingame_menu.rs  main_menu.rs  mod.rs
src/ui/settings_menu/: controls_settings_tab.rs  controls_tab.rs  developer_tab.rs  input_events.rs  mod.rs  video_settings_tab.rs  video_tab.rs
tests/: ability.rs  camera.rs  cooldown.rs  despawn_timer.rs  health.rs  heroes.rs  lib.rs  maps.rs  movement.rs  north.rs  player.rs  projectile.rs
tests/common/: mod.rs
(+110 files in other folders)
