[package]
name = "gardum"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.58"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "render",
    "x11"
] }
bevy_atmosphere = { version = "0.2", optional = true }
bevy_egui = { version = "0.12", features = ["multi_threaded"], optional = true }
bevy-inspector-egui = { version = "0.9", optional = true }
bevy-hikari = "0.1"
heron = { version = "2.1", features = ["3d"] }
leafwing_input_manager = { git = "https://github.com/Leafwing-Studios/leafwing_input_manager", branch = "dev" }
clap = { version = "3.1", features = ["derive"] }
toml = "0.5"
serde = "1.0"
standard_paths = "1.1"
derive_more = { version = "0.99", default-features = false, features = [
    "deref",
    "deref_mut",
    "from",
    "add_assign"
] }
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
glam = { version = "0.20", features = ["approx"] }
rand = "0.8"

[features]
default = ["client"]
client = ["bevy/png", "bevy_atmosphere", "bevy_egui"]
inspector = ["client", "bevy-inspector-egui"]
