[package]
name = "gardum"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.58"

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_atmosphere = { version = "0.3", optional = true }
bevy_egui = { version = "0.14", optional = true }
bevy_renet = "0.0.2"
bevy-inspector-egui = { version = "0.11", default-features = false, features = [
  "clipboard",
  "bevy_pbr",
], optional = true }
bevy_rapier3d = { version = "0.14", default-features = false, features = [
  "dim3",
] }
leafwing-input-manager = { version = "0.3", default-features = false }
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
standard_paths = "1.1"
derive_more = { version = "0.99", default-features = false, features = [
  "from",
  "add_assign",
] }
strum = { version = "0.24", features = ["derive"] }
bitflags = "1.3"
approx = "0.5"
bincode = "1.3"
parking_lot = "0.11"

[dev-dependencies]
glam = { version = "0.20", features = ["approx"] }

[features]
default = ["client"]
client = [
  "bevy/png",
  "bevy/bevy_gltf",
  "bevy/x11",
  "bevy_atmosphere",
  "bevy_egui",
]
debug-collisions=["client", "bevy_rapier3d/debug-render"]
inspector = ["client", "bevy-inspector-egui"]
